// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--always-show-all"
    id=":label8"
  >
    Viser alle options også når valgt
  </label>
  <u-combobox>
    <data
      data-removable="true"
      value="Sogndal"
      role="button"
      tabindex="-1"
      aria-label="Sogndal, Press to remove, 1 of 1"
    >
      Sogndal
    </data>
    <input
      placeholder
      id="components-suggestion--always-show-all"
      type="text"
      list=":u-datalist8"
      aria-label="Viser alle options også når valgt, "
      popovertarget=":u-datalist8"
      aria-autocomplete="list"
      aria-controls=":u-datalist8"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist8"
      aria-labelledby=":label8"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Controlled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--controlled"
    id=":label3"
  >
    Velg destinasjoner
  </label>
  <u-combobox>
    <data
      data-removable="true"
      value="Oslo"
      role="button"
      tabindex="-1"
      aria-label="Oslo, Press to remove, 1 of 1"
    >
      Oslo
    </data>
    <input
      placeholder
      id="components-suggestion--controlled"
      type="text"
      list=":u-datalist3"
      aria-label="Velg destinasjoner, "
      popovertarget=":u-datalist3"
      aria-autocomplete="list"
      aria-controls=":u-datalist3"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist3"
      aria-labelledby=":label3"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Oslo
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Controlled Multiple 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--controlled-multiple"
    id=":label4"
  >
    Velg destinasjoner
  </label>
  <u-combobox data-multiple>
    <data
      data-removable="true"
      value="Oslo"
      role="button"
      tabindex="-1"
      aria-label="Oslo, Press to remove, 1 of 1"
    >
      Oslo
    </data>
    <input
      placeholder
      id="components-suggestion--controlled-multiple"
      type="text"
      list=":u-datalist4"
      aria-label="Velg destinasjoner, Navigate left to find 1 selected"
      popovertarget=":u-datalist4"
      aria-autocomplete="list"
      aria-controls=":u-datalist4"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="true"
      id=":u-datalist4"
      aria-labelledby=":label4"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Oslo
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-1"
    id=":label6"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <u-combobox>
    <input
      placeholder
      id="components-suggestion--custom-filter-alt-1"
      type="text"
      list=":u-datalist6"
      aria-label="Skriv inn et tall mellom 1-6, "
      popovertarget=":u-datalist6"
      aria-autocomplete="list"
      aria-controls=":u-datalist6"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist6"
      aria-labelledby=":label6"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        value="sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        value="brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        value="lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Custom Filter Alt 2 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-2"
    id=":label7"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <u-combobox>
    <input
      placeholder
      id="components-suggestion--custom-filter-alt-2"
      type="text"
      list=":u-datalist7"
      aria-label="Skriv inn et tall mellom 1-6, "
      popovertarget=":u-datalist7"
      aria-autocomplete="list"
      aria-controls=":u-datalist7"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist7"
      aria-labelledby=":label7"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Default Value 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--default-value"
    id=":label5"
  >
    Velg en destinasjon
  </label>
  <u-combobox>
    <data
      data-removable="true"
      value="Sogndal"
      role="button"
      tabindex="-1"
      aria-label="Sogndal, Press to remove, 1 of 1"
    >
      Sogndal
    </data>
    <input
      placeholder
      id="components-suggestion--default-value"
      type="text"
      list=":u-datalist5"
      aria-label="Velg en destinasjon, "
      popovertarget=":u-datalist5"
      aria-autocomplete="list"
      aria-controls=":u-datalist5"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist5"
      aria-labelledby=":label5"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Fetch External 1`] = `
<div lang="en">
  <label
    data-weight="medium"
    for="components-suggestion--fetch-external"
    id=":label9"
  >
    Search for countries (in english)
  </label>
  <u-combobox>
    <input
      placeholder
      id="components-suggestion--fetch-external"
      type="text"
      list=":u-datalist9"
      aria-label="Search for countries (in english), "
      popovertarget=":u-datalist9"
      aria-autocomplete="list"
      aria-controls=":u-datalist9"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d country"
      data-sr-plural="%d countries"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist9"
      aria-labelledby=":label9"
      style="width: 1168px; translate: <removed>;"
    >
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Multiple 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--multiple"
    id=":label2"
  >
    Velg en destinasjon
  </label>
  <u-combobox data-multiple>
    <input
      placeholder
      id="components-suggestion--multiple"
      type="text"
      list=":u-datalist2"
      aria-label="Velg en destinasjon, No selected"
      popovertarget=":u-datalist2"
      aria-autocomplete="list"
      aria-controls=":u-datalist2"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="true"
      id=":u-datalist2"
      aria-labelledby=":label2"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--preview"
    id=":label1"
  >
    Velg en destinasjon
  </label>
  <u-combobox>
    <input
      placeholder
      id="components-suggestion--preview"
      type="text"
      list=":u-datalist1"
      aria-label="Velg en destinasjon, "
      popovertarget=":u-datalist1"
      aria-autocomplete="list"
      aria-controls=":u-datalist1"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist1"
      aria-labelledby=":label1"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;
